--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"axios": "^1.13.2",
+		"express": "^4.22.1",
 		"swiper": "^12.0.3",
 		"vue": "^3.5.24"
 	},
