--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"start": "node server.js"
+		"start": "pm2 start ecosystem.config.cjs"
 	},
 	"dependencies": {
 		"axios": "^1.13.2",
 		"express": "^4.22.1",
+		"pm2": "^5.4.3",
 		"swiper": "^12.0.3",
 		"vue": "^3.5.24"
 	},
